# terraform-aws-rds

./: .gitignore  .pre-commit-config.yaml  README.md  cluster-variables.tf  data.tf  locals.tf  main.tf  outputs.tf  renovate.json  variables.tf  versions.tf
.github/: CODEOWNERS  CONTRIBUTING.md  pull_request_template.md
.github/workflows/: auto-release.yml  documentation.yml  enforce-labels.yml  housekeeping.yml  qa-down.yml  qa.yml  secret-detection.yml  tfsec.yml  trigger-blueprints-repo.yaml
_sub/terraform-aws-rds/: main.tf  variables.tf
_sub/terraform-aws-rds-aurora/: main.tf  outputs.tf  variables.tf
_sub/terraform-aws-rds-proxy/: variables.tf
examples/multi_az_cluster/: main.tf
examples/shared/: vpc.tf
examples/single_instance/: main.tf
examples/single_instance_k8s/: main.tf
modules/cloudwatch_log_groups/: main.tf  outputs.tf  variables.tf  vars.tf
modules/cluster_parameter_group/: main.tf  variables.tf
modules/enhanced_monitoring_role/: main.tf  outputs.tf  variables.tf
modules/instance_parameter_group/: main.tf  outputs.tf
modules/rds_aurora/: README.md  main.tf  outputs.tf  variables.tf
modules/rds_instance/: main.tf  outputs.tf  variables.tf
modules/rds_proxy/: main.tf  outputs.tf  variables.tf
modules/rds_subnet_group/: main.tf
modules/security_group/: main.tf  variables.tf
new_modules/cluster_parameter_group/: outputs.tf
new_modules/db_instance/: main.tf  outputs.tf
new_modules/db_subnet_group/: outputs.tf
scripts/qa/: README.md  pyproject.toml  rds.py  test_rds.py
tests/qa/: main.tf  (+2 more)
tools/: Dockerfile  README.md
(+14 files in other folders)
