[tool.poetry]
name = "qa-test"
version = "0.1.0"
description = ""
authors = ["Audun Nes <aunes@dfds.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.29.3"
sqlalchemy = "^2.0.23"
pandas = "^2.1.3"
black = "^23.11.0"
flake8 = "^6.1.0"
pylint = "^3.0.2"
psycopg2-binary = "^2.9.9"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
